// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Breadcrumbs should do nothing if items property is empty 1`] = `
<ol
  aria-label="breadcrumb"
  className="breadcrumb theme-tc-breadcrumb tc-breadcrumb"
  id="42"
  role="navigation"
/>
`;

exports[`Breadcrumbs should not render dropdown because all items are shown 1`] = `
<ol
  aria-label="breadcrumb"
  className="breadcrumb theme-tc-breadcrumb tc-breadcrumb"
  id="42"
  role="navigation"
>
  <li
    className="tc-breadcrumb-item"
    key="0"
  >
    <span
      id="42-item-0"
    >
      Text A
    </span>
  </li>
  <li
    aria-hidden="true"
    className="tc-breadcrumb-separator separator"
    key="0-separator"
  >
    <Icon
      name="talend-chevron-left"
      transform="rotate-180"
    />
  </li>
  <li
    className="tc-breadcrumb-item"
    key="1"
  >
    <span
      id="42-item-1"
    >
      Text B
    </span>
  </li>
  <li
    aria-hidden="true"
    className="tc-breadcrumb-separator separator"
    key="1-separator"
  >
    <Icon
      name="talend-chevron-left"
      transform="rotate-180"
    />
  </li>
  <li
    className="tc-breadcrumb-item"
    key="2"
  >
    <span
      id="42-item-2"
    >
      Text C
    </span>
  </li>
  <li
    aria-hidden="true"
    className="tc-breadcrumb-separator separator"
    key="2-separator"
  >
    <Icon
      name="talend-chevron-left"
      transform="rotate-180"
    />
  </li>
  <li
    className="tc-breadcrumb-item"
    key="3"
  >
    <span
      id="42-item-3"
    >
      Text D
    </span>
  </li>
  <li
    aria-hidden="true"
    className="tc-breadcrumb-separator separator"
    key="3-separator"
  >
    <Icon
      name="talend-chevron-left"
      transform="rotate-180"
    />
  </li>
  <li
    className="tc-breadcrumb-item active"
    key="4"
  >
    <span
      id="42-item-4"
    >
      Text E
    </span>
  </li>
</ol>
`;

exports[`Breadcrumbs should render dropdown containing 3 items 1`] = `
<ol
  aria-label="breadcrumb"
  className="breadcrumb theme-tc-breadcrumb tc-breadcrumb"
  id="42"
  role="navigation"
>
  <li
    className="sr-only"
    key="0"
  >
    <span
      id="42-item-0"
    >
      Text A
    </span>
  </li>
  <li
    className="sr-only"
    key="1"
  >
    <span
      id="42-item-1"
    >
      Text B
    </span>
  </li>
  <li
    className="sr-only"
    key="2.1"
  >
    <span
      id="42-item-2"
    >
      Text C
    </span>
  </li>
  <li
    aria-hidden="true"
    className="tc-breadcrumb-menu"
    key="2.2"
  >
    <ActionDropdown
      aria-label="Open first links menu"
      bsStyle="default"
      id="42-ellipsis"
      items={
        Array [
          Object {
            "id": "42-item-0",
            "label": "Text A",
            "onClick": [Function],
            "title": undefined,
          },
          Object {
            "id": "42-item-1",
            "label": "Text B",
            "onClick": [Function],
            "title": undefined,
          },
          Object {
            "id": "42-item-2",
            "label": "Text C",
            "onClick": [Function],
            "title": undefined,
          },
        ]
      }
      label="…"
      link={true}
      noCaret={true}
      tooltipPlacement="top"
    />
  </li>
  <li
    aria-hidden="true"
    className="tc-breadcrumb-separator separator"
    key="2-separator"
  >
    <Icon
      name="talend-chevron-left"
      transform="rotate-180"
    />
  </li>
  <li
    className="tc-breadcrumb-item"
    key="3"
  >
    <span
      id="42-item-3"
    >
      Text D
    </span>
  </li>
  <li
    aria-hidden="true"
    className="tc-breadcrumb-separator separator"
    key="3-separator"
  >
    <Icon
      name="talend-chevron-left"
      transform="rotate-180"
    />
  </li>
  <li
    className="tc-breadcrumb-item active"
    key="4"
  >
    <span
      id="42-item-4"
    >
      Text E
    </span>
  </li>
</ol>
`;

exports[`Breadcrumbs should render items ids when provided 1`] = `
<ol
  aria-label="breadcrumb"
  className="breadcrumb theme-tc-breadcrumb tc-breadcrumb"
  id="my-breadcrumb"
  role="navigation"
>
  <li
    className="sr-only"
    key="0.1"
  >
    <span
      id="my-breadcrumb-item-0"
      title="Go to Page Text A"
    >
      Text A
    </span>
  </li>
  <li
    aria-hidden="true"
    className="tc-breadcrumb-menu"
    key="0.2"
  >
    <ActionDropdown
      aria-label="Open first links menu"
      bsStyle="default"
      id="my-breadcrumb-ellipsis"
      items={
        Array [
          Object {
            "id": "my-breadcrumb-item-0",
            "label": "Text A",
            "onClick": [Function],
            "title": "Go to Page Text A",
          },
        ]
      }
      label="…"
      link={true}
      noCaret={true}
      tooltipPlacement="top"
    />
  </li>
  <li
    aria-hidden="true"
    className="tc-breadcrumb-separator separator"
    key="0-separator"
  >
    <Icon
      name="talend-chevron-left"
      transform="rotate-180"
    />
  </li>
  <li
    className="tc-breadcrumb-item"
    key="1"
  >
    <span
      id="my-breadcrumb-item-1"
      title="Go to Page Text B"
    >
      Text B
    </span>
  </li>
  <li
    aria-hidden="true"
    className="tc-breadcrumb-separator separator"
    key="1-separator"
  >
    <Icon
      name="talend-chevron-left"
      transform="rotate-180"
    />
  </li>
  <li
    className="tc-breadcrumb-item"
    key="2"
  >
    <span
      id="my-breadcrumb-item-2"
      title="Go to Page Text C"
    >
      Text C
    </span>
  </li>
  <li
    aria-hidden="true"
    className="tc-breadcrumb-separator separator"
    key="2-separator"
  >
    <Icon
      name="talend-chevron-left"
      transform="rotate-180"
    />
  </li>
  <li
    className="tc-breadcrumb-item active"
    key="3"
  >
    <span
      id="my-breadcrumb-item-3"
      title="Go to Page Text D"
    >
      Text D
    </span>
  </li>
</ol>
`;

exports[`Breadcrumbs should render items with ellipsis and 3 visible items by default 1`] = `
<ol
  aria-label="breadcrumb"
  className="breadcrumb theme-tc-breadcrumb tc-breadcrumb"
  id="42"
  role="navigation"
>
  <li
    className="sr-only"
    key="0.1"
  >
    <span
      id="42-item-0"
      title="Go to Page Text A"
    >
      Text A
    </span>
  </li>
  <li
    aria-hidden="true"
    className="tc-breadcrumb-menu"
    key="0.2"
  >
    <ActionDropdown
      aria-label="Open first links menu"
      bsStyle="default"
      id="42-ellipsis"
      items={
        Array [
          Object {
            "id": "42-item-0",
            "label": "Text A",
            "onClick": [Function],
            "title": "Go to Page Text A",
          },
        ]
      }
      label="…"
      link={true}
      noCaret={true}
      tooltipPlacement="top"
    />
  </li>
  <li
    aria-hidden="true"
    className="tc-breadcrumb-separator separator"
    key="0-separator"
  >
    <Icon
      name="talend-chevron-left"
      transform="rotate-180"
    />
  </li>
  <li
    className="tc-breadcrumb-item"
    key="1"
  >
    <span
      id="42-item-1"
      title="Go to Page Text B"
    >
      Text B
    </span>
  </li>
  <li
    aria-hidden="true"
    className="tc-breadcrumb-separator separator"
    key="1-separator"
  >
    <Icon
      name="talend-chevron-left"
      transform="rotate-180"
    />
  </li>
  <li
    className="tc-breadcrumb-item"
    key="2"
  >
    <span
      id="42-item-2"
      title="Go to Page Text C"
    >
      Text C
    </span>
  </li>
  <li
    aria-hidden="true"
    className="tc-breadcrumb-separator separator"
    key="2-separator"
  >
    <Icon
      name="talend-chevron-left"
      transform="rotate-180"
    />
  </li>
  <li
    className="tc-breadcrumb-item active"
    key="3"
  >
    <span
      id="42-item-3"
      title="Go to Page Text D"
    >
      Text D
    </span>
  </li>
</ol>
`;

exports[`Breadcrumbs should render list of items without ellipsis when set enough max items to display 1`] = `
<ol
  aria-label="breadcrumb"
  className="breadcrumb theme-tc-breadcrumb tc-breadcrumb"
  id="42"
  role="navigation"
>
  <li
    className="tc-breadcrumb-item"
    key="0"
  >
    <span
      id="42-item-0"
    >
      Text A
    </span>
  </li>
  <li
    aria-hidden="true"
    className="tc-breadcrumb-separator separator"
    key="0-separator"
  >
    <Icon
      name="talend-chevron-left"
      transform="rotate-180"
    />
  </li>
  <li
    className="tc-breadcrumb-item"
    key="1"
  >
    <span
      id="42-item-1"
    >
      Text B
    </span>
  </li>
  <li
    aria-hidden="true"
    className="tc-breadcrumb-separator separator"
    key="1-separator"
  >
    <Icon
      name="talend-chevron-left"
      transform="rotate-180"
    />
  </li>
  <li
    className="tc-breadcrumb-item"
    key="2"
  >
    <span
      id="42-item-2"
    >
      Text C
    </span>
  </li>
  <li
    aria-hidden="true"
    className="tc-breadcrumb-separator separator"
    key="2-separator"
  >
    <Icon
      name="talend-chevron-left"
      transform="rotate-180"
    />
  </li>
  <li
    className="tc-breadcrumb-item"
    key="3"
  >
    <span
      id="42-item-3"
    >
      Text D
    </span>
  </li>
  <li
    aria-hidden="true"
    className="tc-breadcrumb-separator separator"
    key="3-separator"
  >
    <Icon
      name="talend-chevron-left"
      transform="rotate-180"
    />
  </li>
  <li
    className="tc-breadcrumb-item active"
    key="4"
  >
    <span
      id="42-item-4"
    >
      Text E
    </span>
  </li>
</ol>
`;

exports[`Breadcrumbs should render small list of items without ellipsis 1`] = `
<ol
  aria-label="breadcrumb"
  className="breadcrumb theme-tc-breadcrumb tc-breadcrumb"
  id="42"
  role="navigation"
>
  <li
    className="tc-breadcrumb-item"
    key="0"
  >
    <span
      id="42-item-0"
      title="Text tile A"
    >
      Text A
    </span>
  </li>
  <li
    aria-hidden="true"
    className="tc-breadcrumb-separator separator"
    key="0-separator"
  >
    <Icon
      name="talend-chevron-left"
      transform="rotate-180"
    />
  </li>
  <li
    className="tc-breadcrumb-item"
    key="1"
  >
    <span
      id="42-item-1"
      title="Text tile B"
    >
      Text B
    </span>
  </li>
  <li
    aria-hidden="true"
    className="tc-breadcrumb-separator separator"
    key="1-separator"
  >
    <Icon
      name="talend-chevron-left"
      transform="rotate-180"
    />
  </li>
  <li
    className="tc-breadcrumb-item active"
    key="2"
  >
    <span
      id="42-item-2"
    >
      Text C
    </span>
  </li>
</ol>
`;
